--- a/app/views/visuals/edit.html.erb
+++ b/app/views/visuals/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Make an edit to your Visuals</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back to Gallery', visuals_path %>
+<div class="container edit">
+  <div class="row">
+      <h1 class="col s12 m12 l12 center-align title">MAKE AN EDIT TO YOUR VISUAL</h1>
+      <%= render 'form' %>
+      <p class="visuals"><%= link_to 'Back to Gallery', visuals_path %></p>
+    </div>
+</div>
