--- a/app/views/visuals/show.html.erb
+++ b/app/views/visuals/show.html.erb
@@ -1,24 +1,49 @@
+<div class="container user-visuals">
 
-<h1> <%= User.find_by(id: @visual.user_id).first_name%>'s WynVisual Gallery</h1>
+  <span class="row">
+    <h1 class="col s12 m12 l12 center-align title"><%= User.find_by(id: @visual.user_id).first_name.upcase %>'s WYNVISUAL GALLERY</h1>
+  </span>
 
 
-<span><%= link_to 'Upload a New WynVisual', new_user_visual_path(current_user) %></span>
-<br>
+<div class="row card-margin">
+  <div class="visuals">    <%= link_to 'Upload a New WynVisual', new_user_visual_path(current_user) %>
 
-<% current_user.visuals.each do |visual| %>
- <!-- Image Owner: <%= User.find_by(id: visual.user_id).first_name%> -->
-<br>
-<%= visual.title %>
-<br>
-<%= visual.description %>
-<br>
-<%= image_tag visual.picture.url %>
+  </div>
+  <% current_user.visuals.each do |visual|  %>
 
-<ul>
-  <li><%= link_to 'Edit', edit_visual_path(@visual) %></li>
-  <li><%= link_to 'Back', visuals_path %></li>
-  <li><%= link_to 'Delete', visual_path(visual),
-                method: :delete,
-                data: { confirm: 'Are you sure?' } %></li>
-</ul>
-<% end %>
+     <div class="col s12 m4 l4">
+       <div class="card large">
+           <div class="card-image">
+           <%= image_tag visual.picture.url%>
+           </div>
+         <div class="card-content">
+           <p class="card-title name"> <%= User.find_by(id: visual.user_id).first_name %></p>
+           <p class="visual-title"><%= visual.title %></p>
+           <p class="visual-description"><%= visual.description %></p>
+
+         </div>
+         <% if current_user.id == visual.user_id %>
+
+           <span class="visuals">
+             <%= link_to 'Edit', edit_visual_path(visual) %> |
+             <%= link_to 'Delete', visual_path(visual), method: :delete, data: { confirm: 'Are you sure?' } %> </span>
+         <% end %>
+       </div>
+     </div>
+   <% end %>
+
+ </div>
+ <p class="visuals"><%= link_to 'Back to Gallery', visuals_path %></p>
+
+
+
+
+
+
+
+
+
+
+
+
+<!--BREAK-->
