--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,9 @@
+html,
 body {
-  background-color: #fff;
+  height: 100vh;
+  width: 100%;
+}
+body {
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -21,15 +25,16 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #fff;
 
   &:visited {
-    color: #666;
+    color: #fff;
   }
 
   &:hover {
     color: #fff;
-    background-color: #000;
+    background-color: #d633ff;
+    padding: .25em;
   }
 }
 
@@ -59,6 +64,8 @@ div {
   display: table;
 }
 
+
+
 #error_explanation {
   width: 450px;
   border: 2px solid red;
@@ -66,6 +73,7 @@ div {
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
+
 
   h2 {
     text-align: left;
