--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.register_message {
+  font-family: 'Anton', sans-serif;
+  font-size: 2.5em;
+}
+
+// 
+// .button {
+//   background-color: white;
+//   color: #d633ff;
+// }
