--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,5 @@
+
+
 <%= form_for(user) do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
@@ -11,37 +13,40 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :first_name %>
+<div class="row">
+  <div class="field col s12 m4 offset-m4 l4 offset-l4">
+    <%= f.label :first_name, nil, class: "sign_up"%>
     <%= f.text_field :first_name %>
   </div>
 
-  <div class="field">
-    <%= f.label :last_name %>
+  <div class="field col s12 m4 offset-m4 l4 offset-l4">
+    <%= f.label :last_name, nil, class: "sign_up" %>
     <%= f.text_field :last_name %>
   </div>
 
-  <div class="field">
-    <%= f.label :email %>
+  <div class="field col s12 m4 offset-m4 l4 offset-l4">
+    <%= f.label :email, nil, class: "sign_up" %>
     <%= f.text_field :email %>
   </div>
 
-  <div class="field">
-    <%= f.label :username %>
+  <div class="field col s12 m4 offset-m4 l4 offset-l4">
+    <%= f.label :username, nil, class: "sign_up" %>
     <%= f.text_field :username %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="field col s12 m4 offset-m4 l4 offset-l4">
+    <%= f.label :password, nil, class: "sign_up" %>
     <%= f.password_field :password %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %>
+  <div class="field col s12 m4 offset-m4 l4 offset-l4">
+    <%= f.label :password_confirmation, nil, class: "sign_up" %>
     <%= f.password_field :password_confirmation %>
   </div>
 
-  <div class="actions">
+  <div class="actions col s12 m4 offset-m4 l4 offset-l4">
     <%= f.submit 'Register' %>
   </div>
 <% end %>
+
+</div>
