--- a/app/views/visuals/index.html.erb
+++ b/app/views/visuals/index.html.erb
@@ -1,43 +1,34 @@
-<h1>Welcome to WYN-VISUALS</h1>
+<div class="container user-visuals">
 
-<%= link_to 'Upload a New WynVisual', new_user_visual_path(current_user) %>
+  <span class="row">
+    <h1 class="col s12 m12 l12 center-align title">WELCOME TO       WYNVISUALS!</h1>
+  </span>
 
-<div>
-  <% @visuals.each do |visual| %>
-  Name: <%= User.find_by(id: visual.user_id).first_name%>
-  <br>
-  <%= image_tag visual.picture.url %>
-  <br>
-  <%= visual.title %>
-  <br>
-  <%= visual.description %>
+ <div class="row card-margin">
+   <div class="visuals">    <%= link_to 'Upload a New WynVisual', new_user_visual_path(current_user) %>
+
+   </div>
+   <% @visuals.each do |visual|  %>
+
+      <div class="col s12 m4 l4">
+        <div class="card large">
+            <div class="card-image">
+            <%= image_tag visual.picture.url%>
+            </div>
+          <div class="card-content">
+            <p class=" card-title visual-owner"> <%= User.find_by(id: visual.user_id).first_name %></p>
+            <p class="visual-title"><%= visual.title %></p><br>
+            <p class="visual-description"><%= visual.description %></p>
+          </div>
+
+          <% if current_user.id == visual.user_id %>
+            <p class="visuals">
+            <%= link_to 'View all of Your Visuals', visual_path(visual) %>
+            </p>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+
+    </div>
 </div>
-
-    <!--
-    <% other_visuals = User.where(id: visual.user_id) %>
-      <% other_visuals.each do |nu| %>
-      Name: <% User.find_by(id: visual.user_id).first_name%>
-      <ul>
-        <%#= image_tag visual.picture.url %>
-        <li><%#= visual.title %><br>
-          <%#= visual.description %></li>
-      </ul>
-      <%end%> -->
-
-<div>
-  <ul>
-  <% if current_user.id == visual.user_id %>
-  <li>  <%= link_to 'View all of Your Visuals', visual_path(visual) %></li>
-
-  <li>  <%= link_to 'Edit', edit_visual_path(visual) %></li>
-
-  <li> <%= link_to 'Delete', visual_path(visual),
-                  method: :delete,
-                  data: { confirm: 'Are you sure?' } %> </li>
-  <br>
-<% end %>
-</div>
-
-  <% end %>
-<br>
-<br>
