--- a/app/views/visuals/new.html.erb
+++ b/app/views/visuals/new.html.erb
@@ -1,3 +1,13 @@
-<%= render 'form' %>
 
-<%= link_to 'Back', visuals_path %>
+  <div class="container new-visual">
+    <div class="row">
+        <h1 class="col s12 m12 l12 center-align title">UPLOAD A NEW VISUAL</h1>
+      </div>
+
+        <%= render 'form' %>
+
+
+    <%= link_to 'Back', visuals_path %>
+
+
+</div>
