--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,13 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.register_message {
-  font-family: 'Anton', sans-serif;
-  font-size: 2.5em;
-}
 
-// 
-// .button {
-//   background-color: white;
-//   color: #d633ff;
-// }
+.title {
+  font-family: 'Anton', sans-serif;
+  font-size: 5.75em;
+  margin: .5em .5 1em .5;
+}
