--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,7 @@
 <div class="container register">
-
   <div class="row">
-    <h1 class="col s12 m12 l12 center-align title">WELCOME TO WYNVISUALS!</h1>
-     <p class="register_message center-align">Register as a new member below</p>
-     <br>
-    <%= render 'form', user: @user %>
-    </div>
+    <h1 class="col s12 m12 l12 center-align title">WELCOME!</h1>
+     <p class="register_message center-align">Register as a new member to begin sharing your story.</p>
+     <%= render 'form', user: @user %>
+  </div>
 </div>
